src/main/java/com/example/MyBookShopApp/errors/WrongEntityException.java
package com.example.MyBookShopApp.errors;

public class WrongEntityException extends Exception {

    public WrongEntityException(String message) {
        super(message);
    }
}
